# editor-svg

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.c
components/: create.c  create.h  edit.c  edit.h  get.c  get.h  list.c  list.h  remove.c  remove.h
config/: allocate.c  allocate.h  color.h  path.c  path.h  set.c  set.h  struct.c  struct.h  style.c  style.h
svg/: load_svg.c  load_svg.h  svg.c  svg.h
utils/: interface_path.c  interface_path.h  windows_user  windows_user.c  windows_user.h
